--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -64,7 +64,6 @@
           <option value='ai-and-natural-language-for-smart-cities--turning-data-into-action'>AI and Natural Language for Smart Cities: Turning Data into Action</option>
           <option value='blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities'>Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</option>
           <option value='data-spaces---security'>Data Spaces &amp; Security</option>
-          <option value='digital-twins-for-real-time-optimization-of-sporting-mega-events'>Digital Twins for Real-Time Optimization of Sporting Mega-Events</option>
           <option value='fiware-catalog'>FIWARE Catalog</option>
           <option value='fiware-core-concepts'>FIWARE Core Concepts</option>
           <option value='from-silos-to-synergy--building-smart-governance-with-interoperability'>From Silos to Synergy: Building Smart Governance with Interoperability</option>
@@ -105,6 +104,7 @@
           <option value='didac-colominas'>Didac Colominas</option>
           <option value='javier-conde-díaz'>Javier Conde Díaz</option>
           <option value='luigi-coppolino'>Luigi Coppolino</option>
+          <option value='eugeniu-costetchi'>Eugeniu Costetchi</option>
           <option value='andrea-cruciani'>Andrea Cruciani</option>
           <option value='mohamed-dafir'>Mohamed Dafir</option>
           <option value='gert-de-tant'>Gert De Tant</option>
@@ -119,7 +119,6 @@
           <option value='eloy-hernandez'>Eloy Hernandez</option>
           <option value='juanjo-hierro'>Juanjo Hierro</option>
           <option value='sveva-ianese'>Sveva Ianese</option>
-          <option value='antonio-jara'>Antonio Jara</option>
           <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='zouhair-lakhdissi'>Zouhair Lakhdissi</option>
           <option value='jure-lampe'>Jure Lampe</option>
