--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -77,9 +77,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/telefónica---fiware--building-smart-cities-and-destinations.html">Telefónica &amp; FIWARE: Building Smart Cities and Destinations</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/sustainable-smart-city-with-environmental-sustainability-for-the-use-case-of-cartagena-for-low-emission-zones.html">Sustainable Smart City With Environmental Sustainability for the Use Case of Cartagena for Low Emission Zones</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/the-use-case-is-the-goal--interoperability-is-the-means--fiware-is-the-core-.html">The Use Case is the Goal. Interoperability is the Means. FIWARE is the Core.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/next-generation-governance--where-smart-meets-digital.html">Next-Generation Governance: Where Smart Meets Digital</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/e-gov-moroccan-context.html">E-gov Moroccan Context</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin Programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
@@ -92,6 +91,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/recreate-water-tool.html">RECREATE Water Tool</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust.html">Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-fragmentation-to-federation--the-power-of-collaboration-in-data-space-development.html">From Fragmentation to Federation: The Power of Collaboration in Data Space Development</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/leveraging-linked-data--smart-cities-and-enhanced-egovernment-through-data-harmonisation.html">Leveraging Linked Data: Smart Cities and Enhanced eGovernment through Data Harmonisation</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
@@ -112,8 +112,6 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions.html">EarthDataInsight: Turning Satellite Data into Smart Decisions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opensustie---data-integration-of-smart-buildings-and-smart-cities.html">OpenSUSTIE - Data Integration of Smart Buildings and Smart Cities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/digital-twins-for-real-time-optimization-of-sporting-mega-events.html">Digital Twins for Real-Time Optimization of Sporting Mega-Events</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/local-digital-twin-toolbox--the-role-of-fiware-in-the-emerging-digital-twins.html">Local Digital Twin Toolbox: The Role of FIWARE in the Emerging Digital Twins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
