--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -114,6 +114,8 @@
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
           <option value='jason-fox'>Jason Fox</option>
           <option value='javier-galvez-campanelli'>Javier Galvez Campanelli</option>
+          <option value='giovanni-giacco'>Giovanni Giacco</option>
+          <option value='giovanni-giacco'>Giovanni Giacco</option>
           <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
           <option value='eloy-hernandez'>Eloy Hernandez</option>
@@ -128,6 +130,8 @@
           <option value='francisco-meléndez'>Francisco Meléndez</option>
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='lydia-montandon'>Lydia Montandon</option>
+          <option value='andrea-montieri'>Andrea Montieri</option>
+          <option value='andrea-montieri'>Andrea Montieri</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalil-nossair'>Khalil Nossair</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
