--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -94,6 +94,7 @@
                 <option value='*'>All Roles</option>
                         <option value='architect'>Architect</option>
                         <option value='assistant-professor'>Assistant Professor</option>
+                        <option value='business-developer'>Business Developer</option>
                         <option value='cbo'>CBO</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
