--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -647,7 +647,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Rainbrrain in Belgium Cities&details=Sustainable Smart City - SDG-Driven Solutions for a Sustainable World Cup Legacy++++Speakers:+Gert De Tant,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T162000/20250522T163000">Rainbrrain in Belgium Cities</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Rainbrain in Belgium Cities&details=Sustainable Smart City - SDG-Driven Solutions for a Sustainable World Cup Legacy++++Speakers:+Gert De Tant,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T162000/20250522T163000">Rainbrain in Belgium Cities</a>
              - Sustainable Smart City - SDG-Driven Solutions for a Sustainable World Cup Legacy
 			<div class="date-time">
 	            <span class="separator-dot"></span>
