--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -115,7 +115,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/rainbrrain-in-belgium-cities.html">Rainbrrain in Belgium Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/rainbrain-in-belgium-cities.html">Rainbrain in Belgium Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-futureproof-cities-through-effective-use-of-data.html">Building Futureproof Cities through Effective Use of Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-monitoring-of-stormwater-retention-basins.html">Smart Monitoring of Stormwater Retention Basins</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/connection-device--displaying-data.html">Connection Device. Displaying Data</a></li>
