--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -91,6 +91,7 @@
     <select name="" id="filterSpeaker">
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
+          <option value='omar-agodim'>Omar Agodim</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
           <option value='mohamed-ali-habouha'>Mohamed Ali Habouha</option>
           <option value='karim-amkar'>Karim Amkar</option>
@@ -112,6 +113,7 @@
           <option value='hicham-el-habti'>Hicham El Habti</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
+          <option value='guven-fidan'>Guven Fidan</option>
           <option value='jason-fox'>Jason Fox</option>
           <option value='javier-galvez-campanelli'>Javier Galvez Campanelli</option>
           <option value='giovanni-giacco'>Giovanni Giacco</option>
@@ -121,6 +123,7 @@
           <option value='juanjo-hierro'>Juanjo Hierro</option>
           <option value='sveva-ianese'>Sveva Ianese</option>
           <option value='jin-kawasaki'>Jin Kawasaki</option>
+          <option value='yassine-laghzioui'>Yassine Laghzioui</option>
           <option value='zouhair-lakhdissi'>Zouhair Lakhdissi</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
@@ -130,6 +133,7 @@
           <option value='yasunori-mochizuki'>Yasunori Mochizuki</option>
           <option value='lydia-montandon'>Lydia Montandon</option>
           <option value='andrea-montieri'>Andrea Montieri</option>
+          <option value='timo-mueller'>Timo Mueller</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalil-nossair'>Khalil Nossair</option>
           <option value='khalid-ouakka'>Khalid Ouakka</option>
