--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -92,6 +92,8 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust.html">Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-fragmentation-to-federation--the-power-of-collaboration-in-data-space-development.html">From Fragmentation to Federation: The Power of Collaboration in Data Space Development</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/leveraging-linked-data--smart-cities-and-enhanced-egovernment-through-data-harmonisation.html">Leveraging Linked Data: Smart Cities and Enhanced eGovernment through Data Harmonisation</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/trusted-data-for-circular-futures--digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Trusted Data for Circular Futures: Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-and-digital---circular-cities--architectures-for-sovereign--scalable-city-data.html">Digital Product Passports and Digital &amp; Circular Cities; Architectures for Sovereign, Scalable City Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
@@ -112,6 +114,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions.html">EarthDataInsight: Turning Satellite Data into Smart Decisions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opensustie---data-integration-of-smart-buildings-and-smart-cities.html">OpenSUSTIE - Data Integration of Smart Buildings and Smart Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/national---international-aid-and-state-grants--leveraging-global-support-for-urban-development.html">National &amp; International Aid and State Grants: Leveraging Global Support for Urban Development</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
