--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -1723,7 +1723,7 @@
   </div>
 
 
-<div class='grid-item sustainable-smart-city sdg-driven-solutions-for-a-sustainable-world-cup-legacy suna-akbayir andrea-montieri gert-de-tant björn-schwarze sachiko-muto massimo-bertoncini 22-may'>
+<div class='grid-item sustainable-smart-city sdg-driven-solutions-for-a-sustainable-world-cup-legacy suna-akbayir gert-de-tant björn-schwarze sachiko-muto massimo-bertoncini andrea-montieri 22-may'>
     <div class="gridElementTextContainer">
       <a href="./program?id=sdg-driven-solutions-for-a-sustainable-world-cup-legacy">
         <div class="chip-track">
