--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -559,7 +559,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=SDG-Driven Solutions for a Sustainable World Cup Legacy&details=Sustainable Smart CityThis session highlights how sustainable energy and water management are essential to building climate-resilient cities ready to host the FIFA World Cup 2030.++Speakers:+Suna Akbayir,Andrea Montieri,Gert De Tant,Björn Schwarze,Sachiko Muto,Massimo Bertoncini,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T160000/20250522T170000">SDG-Driven Solutions for a Sustainable World Cup Legacy</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=SDG-Driven Solutions for a Sustainable World Cup Legacy&details=Sustainable Smart CityThis session highlights how sustainable energy and water management are essential to building climate-resilient cities ready to host the FIFA World Cup 2030.++Speakers:+Suna Akbayir,Gert De Tant,Björn Schwarze,Sachiko Muto,Massimo Bertoncini,Andrea Montieri,,&ctz=Africa/Casablanca&location=Auditorium Atlas&dates=20250522T160000/20250522T170000">SDG-Driven Solutions for a Sustainable World Cup Legacy</a>
              - Sustainable Smart City
 			<div class="date-time">
 	            <span class="separator-dot"></span>
