--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -93,7 +93,6 @@
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='omar-agodim'>Omar Agodim</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
-          <option value='mohamed-ali-habouha'>Mohamed Ali Habouha</option>
           <option value='karim-amkar'>Karim Amkar</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='jose-benítez'>Jose Benítez</option>
@@ -136,7 +135,6 @@
           <option value='timo-mueller'>Timo Mueller</option>
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalil-nossair'>Khalil Nossair</option>
-          <option value='khalid-ouakka'>Khalid Ouakka</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='rubén-rosales-patón'>Rubén Rosales Patón</option>
@@ -147,6 +145,7 @@
           <option value='megumi-suzuki'>Megumi Suzuki</option>
           <option value='nassima-tabloul'>Nassima Tabloul</option>
           <option value='ángeles-tejado'>Ángeles Tejado</option>
+          <option value='thimo-thoeye'>Thimo Thoeye</option>
           <option value='abdellatif-toubati'>Abdellatif Toubati</option>
           <option value='brecht-van-de-vyvere'>Brecht van de Vyvere</option>
           <option value='stefan-wiedemann'>Stefan Wiedemann</option>
