--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -72,10 +72,9 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-the-fiware-global-summit-and-fiware-community-news.html">Introduction to the FIWARE Global Summit and FIWARE Community News</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/global-fiware-use-cases-shaping-smart-cities-for-2030.html">Global FIWARE Use Cases Shaping Smart Cities for 2030</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/first-operational-smart-territory-in-morocco---berkane-experience.html">First Operational Smart Territory in Morocco - Berkane Experience</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-training--day-one.html">FIWARE Training: Day One</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/telefónica---fiware--building-smart-cities-and-destinations.html">Telefónica &amp; FIWARE: Building Smart Cities and Destinations</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/the-use-case-is-the-goal--interoperability-is-the-means--fiware-is-the-core-.html">The Use Case is the Goal. Interoperability is the Means. FIWARE is the Core.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-models.html">Smart Data Models</a></li>
@@ -85,8 +84,6 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/innovative-digital-platforms-for-smart-governance-and-urban-management.html">Innovative Digital Platforms for Smart Governance and Urban Management</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-metropolis-fiware-ihub--leading-brazil-s-smart-city-transformation-with-open-standards.html">Smart Metropolis FIWARE iHub: Leading Brazil’s Smart City Transformation with Open Standards</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/ai---data-driven-cities-for-the-fifa-world-cup-2030.html">AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities.html">Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/recreate-water-tool.html">RECREATE Water Tool</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust.html">Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</a></li>
@@ -95,31 +92,33 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/trusted-data-for-circular-futures--digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Trusted Data for Circular Futures: Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-and-digital---circular-cities--architectures-for-sovereign--scalable-city-data.html">Digital Product Passports and Digital &amp; Circular Cities; Architectures for Sovereign, Scalable City Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/machine-learning--mlops---fiware.html">Machine Learning, MLOps &amp; FIWARE</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/collaboration-of-tegel-projekt-and-mitsubishi-electric--shaping-future-of-smart-cities-with-smart-buildings.html">Collaboration of Tegel Projekt and Mitsubishi Electric: Shaping Future of Smart Cities with Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/aquaspice-real-time-monitoring-platform.html">Aquaspice Real Time Monitoring Platform</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/disrupting-global-construction-with-open-source-and-ai.html">Disrupting Global Construction with Open Source and AI</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/asteriot--a-scalable-fiware-based-platform-for-smart-water-management-and-early-warning-systems.html">AsterIoT: A Scalable FIWARE-Based Platform for Smart Water Management and Early Warning Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/waterverse--water-data-management-ecosystem-for-water-data-spaces.html">Waterverse, Water Data Management Ecosystem for Water Data Spaces</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ideation.html">IDEATION</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-unleashed-for-data-spaces-specification-languages-and-scoring-for-big-data-and-ai-integration.html">Interoperability Unleashed for Data Spaces Specification Languages and Scoring for Big data and AI integration</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/when-intelligence-meets-endurance--ai---data-driven-cities-for-the-fifa-world-cup-2030.html">When Intelligence Meets Endurance: AI &amp; Data-Driven Cities for the FIFA World Cup 2030</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/how-fiwarebox-simplifies-and-accelerates-fiware-based-smart-city-data-integration-and-visualization-on-a-budget.html">How FIWAREBox Simplifies and Accelerates FIWARE-Based Smart City Data Integration and Visualization on a Budget</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/collaboration-of-tegel-projekt-and-mitsubishi-electric--shaping-future-of-smart-cities-with-smart-buildings.html">Collaboration of Tegel Projekt and Mitsubishi Electric: Shaping Future of Smart Cities with Smart Buildings</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/disrupting-global-construction-with-open-source-and-ai.html">Disrupting Global Construction with Open Source and AI</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-for-a-more-circular--transparent-and-traceable-manufacturing---international-trade.html">Digital Product Passports for a More Circular, Transparent and Traceable Manufacturing &amp; International Trade</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ai-and-natural-language-for-smart-cities--turning-data-into-action.html">AI and Natural Language for Smart Cities: Turning Data into Action</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions.html">EarthDataInsight: Turning Satellite Data into Smart Decisions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/opensustie---data-integration-of-smart-buildings-and-smart-cities.html">OpenSUSTIE - Data Integration of Smart Buildings and Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/national---international-aid-and-state-grants--leveraging-global-support-for-urban-development.html">National &amp; International Aid and State Grants: Leveraging Global Support for Urban Development</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ngsi-ld-farm-exercises.html">NGSI-LD Farm Exercises</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/building-the-future--sustainable-smart-cities-for-resilient-urban-living.html">Building the Future: Sustainable Smart Cities for Resilient Urban Living</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/improving-urban-management-through-generative-ai-and-fiware.html">Improving Urban Management through Generative AI and FIWARE</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/opensustie---data-integration-of-smart-buildings-and-smart-cities.html">OpenSUSTIE - Data Integration of Smart Buildings and Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/rainbrain-in-belgium-cities.html">Rainbrain in Belgium Cities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/building-futureproof-cities-through-effective-use-of-data.html">Building Futureproof Cities through Effective Use of Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-monitoring-of-stormwater-retention-basins.html">Smart Monitoring of Stormwater Retention Basins</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/building-futureproof-cities-through-effective-use-of-data.html">Building Futureproof Cities through Effective Use of Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/connection-device--displaying-data.html">Connection Device. Displaying Data</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-between-energy-communities.html">Interoperability Between Energy Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-smart-cities-to-digital-cities.html">From Smart Cities to Digital Cities</a></li>
@@ -150,6 +149,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/panel-open-discussion.html">Panel Open Discussion</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/extended-fiware-catalog-components.html">Extended FIWARE Catalog Components</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/unlocking-the-potential-of-data-spaces-for-smart-cities-and-communities.html">Unlocking the Potential of Data Spaces for Smart Cities and Communities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/training-certificates.html">Training Certificates</a></li>
 	</ul>
 </body>
