--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -51,14 +51,14 @@
                 <option value='*'>All Organisations</option>
                         <option value='addix'>ADDIX</option>
                         <option value='agricolus'>Agricolus</option>
+                        <option value='ai-crafters'>AI Crafters</option>
                         <option value='artech-international-bv'>Artech International Bv</option>
                         <option value='associação-porto-digital'>Associação Porto Digital</option>
-                        <option value='berkane-provincial-council'>Berkane Provincial Council</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
-                        <option value='digital-development-agency--add-'>Digital Development Agency (ADD)</option>
                         <option value='dksr'>DKSR</option>
                         <option value='engineering'>Engineering</option>
                         <option value='eurecat'>Eurecat</option>
+                        <option value='fh-kiel'>FH Kiel</option>
                         <option value='ficodes'>FICODES</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
                         <option value='fiware-technical-steering-committee'>FIWARE Technical Steering Committee</option>
@@ -73,6 +73,7 @@
                         <option value='mohammed-vi-polytechnic-university'>Mohammed VI Polytechnic University</option>
                         <option value='nec-corporation'>NEC Corporation</option>
                         <option value='oasc'>OASC</option>
+                        <option value='parthenope-university-of-naples'>Parthenope University of Naples</option>
                         <option value='prometheus-x'>Prometheus-x</option>
                         <option value='rise-research-institutes-of-sweden'>RISE Research Institutes of Sweden</option>
                         <option value='secmotic'>Secmotic</option>
@@ -99,6 +100,7 @@
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
                         <option value='ciso'>CISO</option>
+                        <option value='co-founder'>Co-Founder</option>
                         <option value='coo'>COO</option>
                         <option value='coordinator'>Coordinator</option>
                         <option value='cto'>CTO</option>
@@ -107,7 +109,6 @@
                         <option value='executive-chairman'>Executive Chairman</option>
                         <option value='expert'>Expert</option>
                         <option value='fellow'>Fellow</option>
-                        <option value='governor'>Governor</option>
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
