--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -96,6 +96,7 @@
           <option value='karim-amkar'>Karim Amkar</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='jose-benítez'>Jose Benítez</option>
+          <option value='az-eddine-bennani'>Az-Eddine Bennani</option>
           <option value='massimo-bertoncini'>Massimo Bertoncini</option>
           <option value='vinith-bhandari'>Vinith Bhandari</option>
           <option value='david-campo'>David Campo</option>
@@ -136,7 +137,9 @@
           <option value='sachiko-muto'>Sachiko Muto</option>
           <option value='khalil-nossair'>Khalil Nossair</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
+          <option value='michael-prange'>Michael Prange</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
+          <option value='luigi-romano'>Luigi Romano</option>
           <option value='rubén-rosales-patón'>Rubén Rosales Patón</option>
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='joaquín-salvachúa'>Joaquín Salvachúa</option>
