--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -52,6 +52,7 @@
                         <option value='addix'>ADDIX</option>
                         <option value='agricolus'>Agricolus</option>
                         <option value='ai-crafters'>AI Crafters</option>
+                        <option value='al-akhawayn-university-of-ifrane'>Al Akhawayn University of Ifrane</option>
                         <option value='artech-international-bv'>Artech International Bv</option>
                         <option value='associação-porto-digital'>Associação Porto Digital</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
