--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -62,6 +62,7 @@
           <option value='ai---data-driven-cities-for-the-fifa-world-cup-2030'>AI &amp; Data-Driven Cities for the FIFA World Cup 2030</option>
           <option value='ai---machine-learning'>AI &amp; Machine Learning</option>
           <option value='ai-and-natural-language-for-smart-cities--turning-data-into-action'>AI and Natural Language for Smart Cities: Turning Data into Action</option>
+          <option value='best-smart-cities-use-cases-in-morocco'>Best Smart Cities Use Cases in Morocco</option>
           <option value='blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities'>Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</option>
           <option value='data-spaces---security'>Data Spaces &amp; Security</option>
           <option value='fiware-catalog'>FIWARE Catalog</option>
@@ -93,7 +94,6 @@
           <option value='alberto-abella'>Alberto Abella</option>
           <option value='omar-agodim'>Omar Agodim</option>
           <option value='suna-akbayir'>Suna Akbayir</option>
-          <option value='karim-amkar'>Karim Amkar</option>
           <option value='joão-bastos'>João Bastos</option>
           <option value='jose-benítez'>Jose Benítez</option>
           <option value='az-eddine-bennani'>Az-Eddine Bennani</option>
@@ -144,12 +144,9 @@
           <option value='alessandro-rossi'>Alessandro Rossi</option>
           <option value='joaquín-salvachúa'>Joaquín Salvachúa</option>
           <option value='björn-schwarze'>Björn Schwarze</option>
-          <option value='mohamed-sefiani'>Mohamed Sefiani</option>
           <option value='megumi-suzuki'>Megumi Suzuki</option>
-          <option value='nassima-tabloul'>Nassima Tabloul</option>
           <option value='ángeles-tejado'>Ángeles Tejado</option>
           <option value='thimo-thoeye'>Thimo Thoeye</option>
-          <option value='abdellatif-toubati'>Abdellatif Toubati</option>
           <option value='brecht-van-de-vyvere'>Brecht van de Vyvere</option>
           <option value='stefan-wiedemann'>Stefan Wiedemann</option>
           <option value='ken-zangelin'>Ken Zangelin</option>
