--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -140,8 +140,12 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/university-5-0-dataspace--a-smart-campus-ecosystem-living-lab-for-ai-driven-innovation-in-the-region.html">University 5.0 Dataspace: a Smart Campus Ecosystem living lab for AI-driven innovation in the region</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/best-smart-cities-use-cases-in-morocco.html">Best Smart Cities Use Cases in Morocco</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/benguerir---um6p--building-morocco-s-green-innovation-capital.html">Benguerir &amp; UM6P: Building Morocco’s Green Innovation Capital</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-turtle-sim-using-a-ros2-iot-agent.html">FIWARE Turtle SIM Using a ROS2 IoT Agent</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/from-territory-to-technology--the-digital-transformation-of-berkane-province.html">From Territory to Technology: The Digital Transformation of Berkane Province</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/smart-wings-for-the-white-dove--tétouan-s-urban-innovation-experience.html">Smart Wings for the White Dove: Tétouan’s Urban Innovation Experience</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/ifrane--morocco-s-alpine-smart-haven---blending-nature--youth-expertise--clean-tech--and-sustainable-tourism.html">Ifrane: Morocco’s Alpine Smart Haven – Blending Nature, Youth Expertise, Clean Tech, and Sustainable Tourism</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/international-academic-cooperation-for-digital-transformation.html">International Academic Cooperation for Digital Transformation</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opportunities-from-each-panelists.html">Opportunities From Each Panelists</a></li>
